uploading recipes work so far

--- a/recipes/tahchin.html
+++ b/recipes/tahchin.html
@@ -7,6 +7,19 @@
 </head>
 <body>
     <h1>Tahchin</h1>
+    <p1>Tahchin is a traditional Persian rice dish made with saffron-infused rice, yogurt, eggs, and often chicken or lamb, and in this case with stinkging nettles too. <br> 
+        It is layered and baked until there is a golden, crispy crust on the outside called tahdig. <br>
+        The dish is usually served with barberries, pistachios, or almonds but I don't decorate it. Flipping it is spectacular enough. <br>
+    </p1>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>3 egg yolks</li>
+            <li>2 cups Yogurt</li>
+            <li>2 tbsp oil</li>
+            <li>1/2 tsp saffron (bloomed w a bit of hot/warm water)</li>
+            <li>Salt (3/4 tbsp / cup of rice????)/ pepper</li>
+            <li>2 cup rice (parboiled)</li>
+        </ul>
 </body>
 </html>
 <a href="../index.html">Home</a>
