add missing chnages

--- a/recipes/tahchin.html
+++ b/recipes/tahchin.html
@@ -19,6 +19,8 @@
             <li>1/2 tsp saffron (bloomed w a bit of hot/warm water)</li>
             <li>Salt (3/4 tbsp / cup of rice????)/ pepper</li>
             <li>2 cup rice (parboiled)</li>
+            <li>2 Medium Carrots</li>
+            <li>1 Medium yellow onion</li>
         </ul>
 </body>
 </html>
