recipe updates to nov 10/25

--- a/recipes/tahchin.html
+++ b/recipes/tahchin.html
@@ -7,21 +7,58 @@
 </head>
 <body>
     <h1>Tahchin</h1>
-    <p1>Tahchin is a traditional Persian rice dish made with saffron-infused rice, yogurt, eggs, and often chicken or lamb, and in this case with stinkging nettles too. <br> 
+        <p1>Tahchin is a traditional Persian rice dish made with saffron-infused rice, yogurt, and eggs, often layered with chicken or lamb. <br> 
+        This recipe focuses on the chicken version but also includes a vegetarian variation featuring stinging nettles. <br>
         It is layered and baked until there is a golden, crispy crust on the outside called tahdig. <br>
         The dish is usually served with barberries, pistachios, or almonds but I don't decorate it. Flipping it is spectacular enough. <br>
     </p1>
-    <h2>Ingredients</h2>
+    <h3>Ingredients & Instructions</h3>    
+    <h4>Outer Crust (same for both versions)</h4>
         <ul>
-            <li>3 egg yolks</li>
-            <li>2 cups Yogurt</li>
-            <li>2 tbsp oil</li>
-            <li>1/2 tsp saffron (bloomed w a bit of hot/warm water)</li>
-            <li>Salt (3/4 tbsp / cup of rice????)/ pepper</li>
-            <li>2 cup rice (parboiled)</li>
-            <li>2 Medium Carrots</li>
-            <li>1 Medium yellow onion</li>
+            <li>3 large eggs - yolks only</li>
+            <li>2 cups plain yogurt (Make sure it’s tangy yogurt, Astro Balkan is good if you need a suggestion)</li>
+            <li>2 Tbsp neutral oil</li>
+            <li>½ tsp saffron threads, bloomed in 2 Tbsp hot water</li>
+            <li>Salt – ¾ Tbsp per cup of rice (so ~1½ Tbsp total)</li>
+            <li>Black pepper to taste</li>
+            <li>2 cups rice (parboiled basmati or long-grain rice, partially cooked, needs to be slightly firm in the center aka al dente)</li>
         </ul>
+        <ol>
+            <li>In a large bowl, mix together egg yolks, yogurt, oil, bloomed saffron, salt, and pepper.</li>
+            <li>Stir in the parboiled rice until well coated.</li>
+            <li>Set aside.</li>
+        </ol>
+        <h>Barberries (same for both versions)</h>
+        <ul>
+            <li>½ cup dried barberries</li>
+            <li>1 Tbsp butter</li>
+            <li>1 Tbsp bloomed saffron (optional, extra color & aroma)</li>
+        </ul>
+        <ol>
+            <li></li>
+            </ol>
+
+    <h4>Chicken Filling</h4>
+        <ul>
+            <li>1 lb (450 g) chicken thighs or breast, cut into chunks</li>
+            <li>1-2 medium carrots, cut into pieces</li>
+            <li>3–4 garlic cloves, smashed</li>
+            <li>2 tbsp tomato paste</li>
+            <li>1 tsp turmeric</li>
+            <li>1 tsp smoked paprika</li>
+            <li>½ tsp cumin</li>
+            <li>½ tsp mustard powder or 1 tsp Dijon mustard</li>
+            <li>Salt &amp; pepper</li>
+            <li>Water (enough to just cover chicken)</li>
+        </ul>
+        <ol>
+            <li>In a pot, place the chicken with carrots, garlic, tomato paste, turmeric, smoked paprika, cumin, mustard, salt, and pepper. Add enough water to just cover the chicken.</li>
+            <li>Bring to a boil, then reduce heat and simmer until chicken is cooked through, about 20-25 minutes.</li>
+            <li>Remove chicken from the broth and shred or cut into smaller pieces. Set aside.</li>
+            In a pot, combine chicken, carrot, garlic, spices, and enough water to cover.
+        </ol>
+    <h4>Stinging Nettle Filling</h4>
+
 </body>
 </html>
 <a href="../index.html">Home</a>
