uploading changes so far

--- a/recipes/tahchin.html
+++ b/recipes/tahchin.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Tahchin</h1>
+
+        <img src= "/Users/foojan/odin/odin-recipes/tahchin.jpeg">
+
         <p1>Tahchin is a traditional Persian rice dish made with saffron-infused rice, yogurt, and eggs, often layered with chicken or lamb. <br> 
         This recipe focuses on the chicken version but also includes a vegetarian variation featuring stinging nettles. <br>
         It is layered and baked until there is a golden, crispy crust on the outside called tahdig. <br>
@@ -28,15 +31,16 @@
             <li>Stir in the parboiled rice until well coated.</li>
             <li>Set aside.</li>
         </ol>
-        <h>Barberries (same for both versions)</h>
+        <h4>Barberries (same for both versions)</h4>
         <ul>
             <li>½ cup dried barberries</li>
             <li>1 Tbsp butter</li>
             <li>1 Tbsp bloomed saffron (optional, extra color & aroma)</li>
         </ul>
         <ol>
-            <li></li>
-            </ol>
+            <li>In a small pan, heat up some oil and add the barberries. Sauté for 1 minute, then add butter and optional saffron.</li>
+            <li>Stir until the barberries get plump then set aside.</li>
+        </ol>
 
     <h4>Chicken Filling</h4>
         <ul>
@@ -58,6 +62,37 @@
             In a pot, combine chicken, carrot, garlic, spices, and enough water to cover.
         </ol>
     <h4>Stinging Nettle Filling</h4>
+<ul>
+    <li>1 large onion, thinly sliced</li>
+    <li>2 cups nettles (or spinach, kale, or chard), roughly chopped</li>
+    <li>1 tsp turmeric</li>
+    <li>½ tsp cumin</li>
+    <li>½ tsp garlic powder</li>
+    <li>Salt &amp; pepper</li>
+    <li>2 Tbsp oil</li>
+    <li>2 Tbsp barberries</li>
+    <li>1 Tbsp butter</li>
+    <li>1 Tbsp bloomed saffron (optional)</li>
+</ul>
+<ol>
+    <li>Heat oil in a pan over medium heat. Add sliced onions and sauté until golden brown.</li>
+    <li>Add turmeric, cumin, garlic powder, salt, and pepper.</li>
+    <li>Add chopped nettles and cook until nettles are wilted and tender.</li>
+    <li>Mix barberries into the nettle-onion mixture; stir on low heat for 2–3 minutes. Set aside.</li>
+</ol>
+
+ <h4>Assembly & Baking (both versions)</h4>
+    <ol>
+        <li>Preheat oven to 350°F (175°C).</li>
+        <li>Grease a deep 9-inch (23 cm) round baking dish or springform pan with oil or butter.</li>
+        <li>Spread half of the rice mixture evenly at the bottom of the dish, pressing down firmly to create a compact layer.</li>
+        <li>Add the chicken filling (or nettle filling for vegetarian version) on top of the rice layer, spreading it out evenly.</li>
+        <li>Top with the remaining rice mixture, pressing down firmly again.</li>
+        <li>Cover the dish tightly with aluminum foil.</li>
+        <li>Bake in the preheated oven for 1 to 1.5 hours.</li>
+        <li>Remove from oven and let it cool for 10-15 minutes before flipping onto a serving plate.</li>
+        <li>Garnish with sautéed barberries and serve warm.</li>
+    </ol>
 
 </body>
 </html>
