editing image location and name

--- a/recipes/tahchin.html
+++ b/recipes/tahchin.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Tahchin</h1>
 
-        <img src= "/Users/foojan/odin/odin-recipes/tahchin.jpeg">
+        <img src="../images/tahchin.jpg" alt="Tahchin dish">
 
         <p1>Tahchin is a traditional Persian rice dish made with saffron-infused rice, yogurt, and eggs, often layered with chicken or lamb. <br> 
         This recipe focuses on the chicken version but also includes a vegetarian variation featuring stinging nettles. <br>
